@startuml

title __MEDICO's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace Medico {
      class com.example.cardihealt.Medico.InicioFragmentMedico {
          ~ activity : Activity
          ~ cardCerrarsesion : CardView
          ~ cardEncuesta : CardView
          ~ cardInformacion : CardView
          ~ cardInformes : CardView
          ~ cardRecomendacionesMedico : CardView
          ~ vista : View
          {static} - ARG_PARAM1 : String
          {static} - ARG_PARAM2 : String
          - gso : GoogleSignInOptions
          - mAuth : FirebaseAuth
          - mDatabase : DatabaseReference
          - mGoogleSignInClient : GoogleSignInClient
          - mParam1 : String
          - mParam2 : String
          + InicioFragmentMedico()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Medico {
      class com.example.cardihealt.Medico.Menu_Medico {
          ~ fragmentInicioMedico : Fragment
          + onKeyDown()
          # onCreate()
      }
    }
  }
  

  com.example.cardihealt.Medico.InicioFragmentMedico -up-|> androidx.fragment.app.Fragment
  com.example.cardihealt.Medico.Menu_Medico -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
